src/main/java/com/example/demobooks/error/AuthorsIsEmptyException.java
package com.example.demobooks.error;

public class AuthorsIsEmptyException extends Exception{
    public AuthorsIsEmptyException(String message) {
        super(message);
    }
}
